@@ -110,8 +110,8 @@ IncludeVerInfo=1
 AutoIncBuild=0
 MajorVer=1
 MinorVer=1
-Release=6
-Build=288
+Release=7
+Build=290
 Debug=0
 PreRelease=0
 Special=0
@@ -122,7 +122,7 @@ CodePage=1252
 [Version Info Keys]
 CompanyName=
 FileDescription=xxm Project Editor
-FileVersion=1.1.6.288
+FileVersion=1.1.7.290
 InternalName=xxmProject
 LegalCopyright=
 LegalTrademarks=
